Fail lint when a single translation file has more than one string with the same key.
This isn't going to catch all duplicates. Duplicates also can still exist between files, and with mismatch cases. That's OK, one thing at a time.

--- a/package.json
+++ b/package.json
@@ -76,9 +76,10 @@
     "build:server": "tsc --build src/tsconfig.json",
     "build:tests": "tsc --build tests/tsconfig.json",
     "clean": "rm -r ./build/ ./src/genfiles/ || true",
-    "lint": "npm run lint:server && npm run lint:client",
+    "lint": "npm run lint:server && npm run lint:i18n && npm run lint:client",
     "lint:client": "vti diagnostics",
     "lint:server": "eslint --cache src tests --ext ts --ext vue",
+    "lint:i18n": "npx ts-node src/tools/translation_audit.ts",
     "lint:fix": "eslint --fix src tests --ext ts --ext vue",
     "make:cards": "node build/src/server/tools/export_card_rendering.js",
     "make:css": "lessc src/styles/common.less build/styles.css && node src/server/tools/gzip.js",
