Update .env.sample (#7241)
* Update LoginHome.vue

taking Discord Id from env

* Update .env.sample

URL_ROOT insteadof URL_REDIRECT, according to Discord.ts

* Unrolled changes in LoginHome.vue as for request

--- a/.env.sample
+++ b/.env.sample
@@ -109,4 +109,4 @@
 # SESSION_DURATION=30m
 
 # The root URL of this server. Used for auth redirects
-# URL_REDIRECT=http://localhost:8080
+# URL_ROOT=http://localhost:8080
