chore: 升级代码风格检查与格式化规则
本次提交主要用于改善项目的代码风格一致性和开发体验。

- 为JSON文件添加了ESLint支持和自动格式化。
- 新增规则：自动将多个连续空行合并为一个，以优化可读性。
- 更新了相关的开发依赖包（package.json），并修复了npm audit发现的部分漏洞。

--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "css-loader": "^5.2.6",
     "eslint": "^8.20.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-jsonc": "^2.20.1",
     "eslint-plugin-vue": "^9.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.13",
     "jsdom": "^22.1.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "less": "^3.10.3",
     "less-loader": "^10.0.0",
     "mocha": "^9.2.2",
@@ -74,7 +76,7 @@
     "build": "npm run make:static && npm run build:server && npm run build:client",
     "build:client": "npm run make:cards && cross-env NODE_ENV=production webpack",
     "build:server": "tsc --build src/tsconfig.json",
-    "build:test":  "tsc --build tests/tsconfig.json",
+    "build:test": "tsc --build tests/tsconfig.json",
     "build:tests": "tsc --build tests/tsconfig.json",
     "clean": "rm -r ./build/ ./src/genfiles/ || true",
     "lint": "npm run lint:server && npm run lint:i18n && npm run lint:client",
